--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,7 +94,7 @@ jobs:
             exit 1
           fi
           echo "✅ Build successful - $built_services services ready for deployment"
-      
+
       - name: Set version variables
         if: github.ref == 'refs/heads/main' && success() && (needs.changed-files.outputs.frontend-tests > 0 || needs.changed-files.outputs.backend-tests > 0)
         id: version
@@ -102,7 +102,7 @@ jobs:
           # Get short SHA for the commit
           SHORT_SHA=$(git rev-parse --short HEAD)
           echo "short_sha=$SHORT_SHA" >> $GITHUB_OUTPUT
-          
+
           # Check if this commit has a tag
           GIT_TAG=$(git tag --points-at HEAD | head -n 1)
           if [ -n "$GIT_TAG" ]; then
@@ -112,7 +112,7 @@ jobs:
             echo "version=$SHORT_SHA" >> $GITHUB_OUTPUT
             echo "No git tag found, using commit SHA: $SHORT_SHA"
           fi
-          
+
           # Get current date in YYYYMMDD format
           BUILD_DATE=$(date +'%Y%m%d')
           echo "build_date=$BUILD_DATE" >> $GITHUB_OUTPUT
@@ -125,22 +125,22 @@ jobs:
             if [ -f "$service/Dockerfile" ]; then
               service_name=$(basename $service)
               echo "Publishing $service_name to GitHub Container Registry"
-              
+
               # Tag with version info
               docker tag nerdwork-$service_name:test ghcr.io/${{ github.repository_owner }}/nerdwork-$service_name:${{ steps.version.outputs.version }}
               docker tag nerdwork-$service_name:test ghcr.io/${{ github.repository_owner }}/nerdwork-$service_name:${{ steps.version.outputs.build_date }}
               docker tag nerdwork-$service_name:test ghcr.io/${{ github.repository_owner }}/nerdwork-$service_name:latest
-              
+
               # Push all tags
               docker push ghcr.io/${{ github.repository_owner }}/nerdwork-$service_name:${{ steps.version.outputs.version }}
               docker push ghcr.io/${{ github.repository_owner }}/nerdwork-$service_name:${{ steps.version.outputs.build_date }}
               docker push ghcr.io/${{ github.repository_owner }}/nerdwork-$service_name:latest
-              
+
               echo "✅ Published $service_name with tags: latest, ${{ steps.version.outputs.version }}, ${{ steps.version.outputs.build_date }}"
             fi
           done
           echo "✅ All Docker images published successfully"
-      
+
       - name: Create artifact summary
         if: success() && github.ref == 'refs/heads/main' && (needs.changed-files.outputs.frontend-tests > 0 || needs.changed-files.outputs.backend-tests > 0)
         id: artifact-summary
@@ -148,16 +148,16 @@ jobs:
           echo "## 🚀 Docker Images Created" > artifact_summary.md
           echo "| Service | Tags | Repository |" >> artifact_summary.md
           echo "| ------- | ---- | ---------- |" >> artifact_summary.md
-          
+
           for service in docker/*; do
             if [ -f "$service/Dockerfile" ]; then
               service_name=$(basename $service)
               echo "| $service_name | latest, ${{ steps.version.outputs.version }}, ${{ steps.version.outputs.build_date }} | ghcr.io/${{ github.repository_owner }}/nerdwork-$service_name |" >> artifact_summary.md
             fi
           done
-          
+
           cat artifact_summary.md
-          
+
       - name: Notify about artifacts
         if: success() && github.ref == 'refs/heads/main' && (needs.changed-files.outputs.frontend-tests > 0 || needs.changed-files.outputs.backend-tests > 0)
         uses: actions/github-script@v7
@@ -166,15 +166,15 @@ jobs:
           script: |
             const fs = require('fs');
             const artifactSummary = fs.readFileSync('artifact_summary.md', 'utf8');
-            
+
             const issueBody = `# 📦 New Artifacts Available
-            
+
             ${artifactSummary}
-            
+
             These artifacts are ready for deployment to test environment.
             Workflow run: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
             `;
-            
+
             github.rest.issues.create({
               owner: context.repo.owner,
               repo: context.repo.repo,
@@ -182,7 +182,7 @@ jobs:
               body: issueBody,
               labels: ['artifacts', 'ready-for-testing']
             });
-      
+
       - name: Notify failure on PR (GitHub comment)
         if: failure() && github.event_name == 'pull_request'
         uses: actions/github-script@v7
@@ -221,17 +221,17 @@ jobs:
               body: `@${{ github.actor }} CI failed on this commit (${{ matrix.test-type.name }}). Please check the logs: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}`
             })
 
-  deploy-to-test:
-    name: Deploy to Test Environment
+  deploy-to-staging:
+    name: Deploy to Staging Environment
     needs: [build-and-test]
     if: success() && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     environment:
-      name: test
-      url: https://test.nerdwork-plus.example.com  # Replace with your actual test environment URL
+      name: staging
+      url: https://staging.nerdwork-plus.example.com  # Replace with your actual staging environment URL
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Create deployment
         id: deployment
         uses: actions/github-script@v7
@@ -248,7 +248,7 @@ jobs:
               description: 'Deploying to test environment'
             });
             return deployment.data.id;
-      
+
       - name: Set deployment status to in_progress
         uses: actions/github-script@v7
         with:
@@ -261,35 +261,35 @@ jobs:
               state: 'in_progress',
               description: 'Deployment started'
             });
-      
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1  # Replace with your AWS region
-      
-      - name: Copy test environment file
+
+      - name: Copy staging environment file
         run: |
-          echo "Copying .env.test file for deployment..."
-          cp .env.test .env
-          
-      - name: Deploy to test environment
+          echo "Copying .env.staging file for deployment..."
+          cp .env.staging .env
+
+      - name: Deploy to staging environment
         run: |
-          echo "Deploying to test environment..."
+          echo "Deploying to staging environment..."
           # Pull the latest Docker images from GitHub Container Registry
           aws ecr get-login-password | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com
-          
-          # Load environment variables from .env.test
+
+          # Load environment variables from .env.staging
           set -a
           source .env
           set +a
-          
+
           # Update ECS services or other deployment steps
           # Example: aws ecs update-service --cluster test-cluster --service nerdwork-api --force-new-deployment
-          
+
           echo "✅ Deployment to test environment completed"
-      
+
       - name: Set deployment status to success
         if: success()
         uses: actions/github-script@v7
@@ -302,9 +302,9 @@ jobs:
               deployment_id: ${{ steps.deployment.outputs.result }},
               state: 'success',
               description: 'Deployment successful',
-              environment_url: 'https://test.nerdwork-plus.example.com'  # Replace with your actual test URL
+              environment_url: 'https://staging.nerdwork-plus.example.com'  # Replace with your actual staging URL
             });
-      
+
       - name: Set deployment status to failure
         if: failure()
         uses: actions/github-script@v7
@@ -318,8 +318,8 @@ jobs:
               state: 'failure',
               description: 'Deployment failed'
             });
-      
-      - name: Notify about test deployment
+
+      - name: Notify about staging deployment
         if: success()
         uses: actions/github-script@v7
         with:
@@ -329,7 +329,7 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '🚀 Successfully deployed to test environment! You can view it at https://test.nerdwork-plus.example.com'
+              body: '🚀 Successfully deployed to staging environment! You can view it at https://staging.nerdwork-plus.example.com'
             });
 
   deploy-to-production:
@@ -342,12 +342,12 @@ jobs:
       url: https://nerdwork-plus.example.com  # Replace with your actual production URL
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Wait for approval
         run: |
           echo "Deployment to production requires manual approval in GitHub Actions."
           echo "Please approve this deployment in the GitHub Actions UI."
-      
+
       - name: Create deployment
         id: deployment
         uses: actions/github-script@v7
@@ -364,7 +364,7 @@ jobs:
               description: 'Deploying to production environment'
             });
             return deployment.data.id;
-      
+
       - name: Set deployment status to in_progress
         uses: actions/github-script@v7
         with:
@@ -377,35 +377,35 @@ jobs:
               state: 'in_progress',
               description: 'Production deployment started'
             });
-      
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1  # Replace with your AWS region
-      
+
       - name: Copy production environment file
         run: |
           echo "Copying .env.production file for deployment..."
           cp .env.production .env
-          
+
       - name: Deploy to production environment
         run: |
           echo "Deploying to production environment..."
           # Pull the latest Docker images from GitHub Container Registry
           aws ecr get-login-password | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com
-          
+
           # Load environment variables from .env.production
           set -a
           source .env
           set +a
-          
+
           # Update ECS services or other deployment steps
           # Example: aws ecs update-service --cluster prod-cluster --service nerdwork-api --force-new-deployment
-          
+
           echo "✅ Deployment to production environment completed"
-      
+
       - name: Set deployment status to success
         if: success()
         uses: actions/github-script@v7
@@ -420,7 +420,7 @@ jobs:
               description: 'Production deployment successful',
               environment_url: 'https://nerdwork-plus.example.com'  # Replace with your actual production URL
             });
-      
+
       - name: Set deployment status to failure
         if: failure()
         uses: actions/github-script@v7
@@ -434,7 +434,7 @@ jobs:
               state: 'failure',
               description: 'Production deployment failed'
             });
-      
+
       - name: Notify about production deployment
         if: success()
         uses: actions/github-script@v7
@@ -442,13 +442,13 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const issueBody = `# 🚀 Production Deployment Successful
-            
+
             Version: ${{ github.sha }}
             Deployment URL: https://nerdwork-plus.example.com
-            
+
             This version has been successfully deployed to production.
             `;
-            
+
             github.rest.issues.create({
               owner: context.repo.owner,
               repo: context.repo.repo,
