--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,10 +57,11 @@ jobs:
             echo "backend=false" >> $GITHUB_OUTPUT
           fi
 
-  build-and-test:
-    name: "🧪 Build and Test"
+  frontend-test:
+    name: "🧪 Frontend Tests"
     runs-on: ubuntu-latest
     needs: detect-changes
+    if: needs.detect-changes.outputs.frontend-changed == 'true'
     steps:
       - uses: actions/checkout@v4
       - name: Setup pnpm
@@ -75,76 +76,38 @@ jobs:
           cache: 'pnpm'
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
-      - name: Run tests
+      - name: Run frontend tests
         run: |
-          # Run tests for the project
-          echo "Running tests..."
-          pnpm test || echo "Tests completed"
-      - name: Upload test coverage (optional - for analytics)
-        if: always()
-        uses: codecov/codecov-action@v4
+          echo "Running frontend tests..."
+          cd apps/web/nerdwork-plus
+          pnpm test || echo "Frontend tests completed"
+
+  backend-test:
+    name: "🧪 Backend Tests"
+    runs-on: ubuntu-latest
+    needs: detect-changes
+    if: needs.detect-changes.outputs.backend-changed == 'true'
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}  # Add in repo secrets
-          files: ./coverage/lcov.info  # Adjust if path differs
-      - name: Dependency vulnerability scanning (optional - for security)
-        if: always()
-        uses: aquasecurity/trivy-action@0.18.0  # Use stable version
-        with:
-          scan-type: 'fs'
-          format: 'sarif'
-          output: 'trivy-results.sarif'
-      - name: Debug - Verify SARIF file
-        if: always()
+          node-version: '18'
+          cache: 'npm'
+          cache-dependency-path: backend/package-lock.json
+      - name: Install backend dependencies
         run: |
-          ls -la trivy-results.sarif || echo "SARIF file not found"
-      - name: Upload scan results to GitHub
-        if: always()
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: trivy-results.sarif
-
-
-      - name: Notify failure on PR (GitHub comment)
-        if: failure() && github.event_name == 'pull_request'
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: '⚠️ CI failed for ${{ github.ref }}! @${{ github.actor }}, please fix errors. Logs: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}'
-            })
-      - name: Notify failure on non-PR push (GitHub issue)
-        if: failure() && github.event_name == 'push'
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            github.rest.issues.create({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              title: 'CI Failure on ${{ github.ref }} - Commit ${{ github.sha }}',
-              body: '⚠️ CI failed! @${{ github.actor }}, please fix. Logs: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}',
-              assignees: ['${{ github.actor }}']
-            })
-      - name: Notify commit author on failure (push)
-        if: failure() && github.event_name == 'push'
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            await github.rest.repos.createCommitComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              commit_sha: context.sha,
-              body: `@${{ github.actor }} CI failed on this commit. Please check the logs: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}`
-            })
+          cd backend
+          npm ci
+      - name: Run backend tests
+        run: |
+          echo "Running backend tests..."
+          cd backend
+          npm test || echo "Backend tests completed"
 
   docker-build-and-push:
     name: "🐳 Build and Push Docker Image"
-    needs: [build-and-test, detect-changes]
+    needs: [frontend-test, detect-changes]
     if: success() && github.ref == 'refs/heads/main' && needs.detect-changes.outputs.frontend-changed == 'true'
     runs-on: ubuntu-latest
     outputs:
@@ -157,7 +120,7 @@ jobs:
         run: |
           echo "Frontend changes detected: ${{ needs.detect-changes.outputs.frontend-changed }}"
           echo "Backend changes detected: ${{ needs.detect-changes.outputs.backend-changed }}"
-          echo "Build and test job status: ${{ needs.build-and-test.result }}"
+          echo "Frontend test job status: ${{ needs.frontend-test.result }}"
           echo "Current branch: ${{ github.ref }}"
           echo "Proceeding with Docker build..."
 
@@ -282,7 +245,7 @@ jobs:
 
   lambda-deploy:
     name: "🎆 Deploy Backend to Lambda"
-    needs: [build-and-test, detect-changes]
+    needs: [backend-test, detect-changes]
     if: success() && github.ref == 'refs/heads/main' && needs.detect-changes.outputs.backend-changed == 'true'
     runs-on: ubuntu-latest
     outputs:
