--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,46 +22,38 @@ on:
     branches: [main]  # Run on PRs to dev or main
 
 jobs:
-  detect-changes:
+  changed-files:
     runs-on: ubuntu-latest
     outputs:
-      frontend-changed: ${{ steps.changes.outputs.frontend }}
-      backend-changed: ${{ steps.changes.outputs.backend }}
+      frontend-tests: ${{ steps.check-files.outputs.frontend }}
+      backend-tests: ${{ steps.check-files.outputs.backend }}
     steps:
       - uses: actions/checkout@v4
-        with:
-          fetch-depth: 2
-      
-      - name: Detect changes
-        id: changes
+      - name: Check changed files
+        id: check-files
         run: |
-          echo "=== Files changed ==="
-          git diff --name-only HEAD~1 HEAD
-          echo "==================="
-          
-          # Check for frontend changes
-          if git diff --name-only HEAD~1 HEAD | grep -q '^apps/'; then
-            echo "✅ Frontend changes detected"
-            echo "frontend=true" >> $GITHUB_OUTPUT
-          else
-            echo "❌ No frontend changes"
-            echo "frontend=false" >> $GITHUB_OUTPUT
-          fi
-          
-          # Check for backend changes  
-          if git diff --name-only HEAD~1 HEAD | grep -q '^backend/'; then
-            echo "✅ Backend changes detected"
-            echo "backend=true" >> $GITHUB_OUTPUT
-          else
-            echo "❌ No backend changes"
-            echo "backend=false" >> $GITHUB_OUTPUT
-          fi
+          # More inclusive patterns to catch all relevant changes
+          FRONTEND_CHANGES=$(git diff --name-only HEAD^ HEAD | grep -E '(apps/|apps/web/|Dockerfile|package\.json|pnpm-).*' | wc -l | xargs)
+          BACKEND_CHANGES=$(git diff --name-only HEAD^ HEAD | grep -E '(backend/|package\.json|pnpm-).*' | wc -l | xargs)
 
-  frontend-test:
-    name: "🧪 Frontend Tests"
+          echo "Files changed:"
+          git diff --name-only HEAD^ HEAD || echo "No files changed"
+
+          echo "frontend=${FRONTEND_CHANGES}" >> $GITHUB_OUTPUT
+          echo "backend=${BACKEND_CHANGES}" >> $GITHUB_OUTPUT
+
+          echo "Frontend changes detected: ${FRONTEND_CHANGES}"
+          echo "Backend changes detected: ${BACKEND_CHANGES}"
+
+  build-and-test:
+    name: "🧪 Build and Test"
     runs-on: ubuntu-latest
-    needs: detect-changes
-    if: needs.detect-changes.outputs.frontend-changed == 'true'
+    needs: changed-files
+    strategy:
+      matrix:
+        test-type:
+          - { name: frontend-tests, path: 'apps/web/**', command: 'test' }
+          - { name: backend-tests, path: 'backend/**', command: 'test' }
     steps:
       - uses: actions/checkout@v4
       - name: Setup pnpm
@@ -76,39 +68,80 @@ jobs:
           cache: 'pnpm'
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
-      - name: Run frontend tests
+      - name: Run ${{ matrix.test-type.name }}
+        if: needs.changed-files.outputs[matrix.test-type.name] > 0
         run: |
-          echo "Running frontend tests..."
-          cd apps/web/nerdwork-plus
-          pnpm test || echo "Frontend tests completed"
-
-  backend-test:
-    name: "🧪 Backend Tests"
-    runs-on: ubuntu-latest
-    needs: detect-changes
-    if: needs.detect-changes.outputs.backend-changed == 'true'
-    steps:
-      - uses: actions/checkout@v4
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+          if [ -f "tsconfig.${{ matrix.test-type.name }}.json" ]; then
+            pnpm ${{ matrix.test-type.command }} --config tsconfig.${{ matrix.test-type.name }}.json
+          else
+            pnpm ${{ matrix.test-type.command }}
+          fi
+      - name: Upload test coverage (optional - for analytics)
+        if: always() && needs.changed-files.outputs[matrix.test-type.name] > 0
+        uses: codecov/codecov-action@v4
         with:
-          node-version: '18'
-          cache: 'npm'
-          cache-dependency-path: backend/package-lock.json
-      - name: Install backend dependencies
+          token: ${{ secrets.CODECOV_TOKEN }}  # Add in repo secrets
+          files: ./coverage/lcov.info  # Adjust if path differs
+      - name: Dependency vulnerability scanning (optional - for security)
+        if: always() && needs.changed-files.outputs[matrix.test-type.name] > 0
+        uses: aquasecurity/trivy-action@0.18.0  # Use stable version
+        with:
+          scan-type: 'fs'
+          format: 'sarif'
+          output: 'trivy-results-${{ matrix.test-type.name }}.sarif'
+      - name: Debug - Verify SARIF file
+        if: always() && needs.changed-files.outputs[matrix.test-type.name] > 0
         run: |
-          cd backend
-          npm ci
-      - name: Run backend tests
-        run: |
-          echo "Running backend tests..."
-          cd backend
-          npm test || echo "Backend tests completed"
+          ls -la trivy-results-${{ matrix.test-type.name }}.sarif || echo "SARIF file not found for ${{ matrix.test-type.name }}"
+      - name: Upload scan results to GitHub
+        if: always() && needs.changed-files.outputs[matrix.test-type.name] > 0
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: trivy-results-${{ matrix.test-type.name }}.sarif
+
+
+      - name: Notify failure on PR (GitHub comment)
+        if: failure() && github.event_name == 'pull_request'
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: '⚠️ CI failed on ${{ matrix.test-type.name }} for ${{ github.ref }}! @${{ github.actor }}, please fix errors. Logs: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}'
+            })
+      - name: Notify failure on non-PR push (GitHub issue)
+        if: failure() && github.event_name == 'push'
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            github.rest.issues.create({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              title: 'CI Failure on ${{ github.ref }} - Commit ${{ github.sha }}',
+              body: '⚠️ CI failed on ${{ matrix.test-type.name }}! @${{ github.actor }}, please fix. Logs: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}',
+              assignees: ['${{ github.actor }}']
+            })
+      - name: Notify commit author on failure (push)
+        if: failure() && github.event_name == 'push'
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            await github.rest.repos.createCommitComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              commit_sha: context.sha,
+              body: `@${{ github.actor }} CI failed on this commit (${{ matrix.test-type.name }}). Please check the logs: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}`
+            })
 
   docker-build-and-push:
     name: "🐳 Build and Push Docker Image"
-    needs: [frontend-test, detect-changes]
-    if: success() && github.ref == 'refs/heads/main' && needs.detect-changes.outputs.frontend-changed == 'true'
+    needs: [build-and-test, changed-files]  # ⬅️ Waits for tests to pass and needs change detection
+    if: success() && github.ref == 'refs/heads/main' && needs.changed-files.outputs.frontend-tests > 0
     runs-on: ubuntu-latest
     outputs:
       image-version: ${{ steps.version.outputs.version }}
@@ -118,9 +151,9 @@ jobs:
 
       - name: Debug - Show change detection results
         run: |
-          echo "Frontend changes detected: ${{ needs.detect-changes.outputs.frontend-changed }}"
-          echo "Backend changes detected: ${{ needs.detect-changes.outputs.backend-changed }}"
-          echo "Frontend test job status: ${{ needs.frontend-test.result }}"
+          echo "Frontend tests detected: ${{ needs.changed-files.outputs.frontend-tests }}"
+          echo "Backend tests detected: ${{ needs.changed-files.outputs.backend-tests }}"
+          echo "Build and test job status: ${{ needs.build-and-test.result }}"
           echo "Current branch: ${{ github.ref }}"
           echo "Proceeding with Docker build..."
 
@@ -245,8 +278,8 @@ jobs:
 
   lambda-deploy:
     name: "🎆 Deploy Backend to Lambda"
-    needs: [backend-test, detect-changes]
-    if: success() && github.ref == 'refs/heads/main' && needs.detect-changes.outputs.backend-changed == 'true'
+    needs: [build-and-test, changed-files]  # ⬅️ Runs parallel to Docker build
+    if: success() && github.ref == 'refs/heads/main' && needs.changed-files.outputs.backend-tests > 0
     runs-on: ubuntu-latest
     outputs:
       lambda-endpoint: ${{ steps.deploy.outputs.api_endpoint }}
@@ -255,8 +288,7 @@ jobs:
 
       - name: Debug backend changes
         run: |
-          echo "Backend changes detected: ${{ needs.detect-changes.outputs.backend-changed }}"
-          echo "Frontend changes detected: ${{ needs.detect-changes.outputs.frontend-changed }}"
+          echo "Backend changes detected: ${{ needs.changed-files.outputs.backend-tests }}"
           echo "Proceeding with Lambda deployment..."
 
       - name: Setup Node.js for Backend
@@ -541,7 +573,7 @@ jobs:
 
   deploy-to-staging:
     name: "🚀 Deploy to Staging Environment"
-    needs: [docker-build-and-push, lambda-deploy, detect-changes]
+    needs: [docker-build-and-push, lambda-deploy, changed-files]  # ⬅️ Waits for both builds
     if: |
       always() && github.ref == 'refs/heads/main' && (
         (needs.docker-build-and-push.result == 'success') ||
@@ -559,8 +591,8 @@ jobs:
           echo "Deployment Status Summary:"
           echo "Docker build result: ${{ needs.docker-build-and-push.result }}"
           echo "Lambda deploy result: ${{ needs.lambda-deploy.result }}"
-          echo "Frontend changes: ${{ needs.detect-changes.outputs.frontend-changed }}"
-          echo "Backend changes: ${{ needs.detect-changes.outputs.backend-changed }}"
+          echo "Frontend changes: ${{ needs.changed-files.outputs.frontend-tests }}"
+          echo "Backend changes: ${{ needs.changed-files.outputs.backend-tests }}"
           echo "Current branch: ${{ github.ref }}"
           echo "Proceeding with staging deployment..."
 
@@ -690,9 +722,9 @@ jobs:
             });
 
   deploy-to-production:
-    name: "🏦 Deploy to Production"
-    needs: [docker-build-and-push, lambda-deploy]
-    if: success() && github.ref == 'refs/heads/main' && github.event_name == 'workflow_dispatch'
+    name: "🏭 Deploy to Production"
+    needs: [deploy-to-staging]  # ⬅️ Waits for staging deployment success
+    if: success() && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     environment:
       name: production
